# openmemo

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
ci-workflows/: ci.yml
cookbooks/: coding_assistant.py  customer_support.py  multi_agent_memory_demo.py  personal_memory.py  skill_engine_demo.py  team_memory_demo.py
docs/: adapters.md
examples/memory_collapse_test/: README.md
openmemo/: __init__.py  _internal.py  cli.py  config.py  migration.py  upgrade.py
openmemo/adapters/: __init__.py  autogen_adapter.py  base_adapter.py  crewai_adapter.py  http_adapter.py  langchain.py  mcp.py  openclaw.py
openmemo/api/: docs.py  inspector_html.py  remote.py  rest_server.py  sdk.py
openmemo/core/: consolidation.py  memcell.py  recall.py  reconstruct.py
openmemo/governance/: conflict_detector.py
openmemo/protocol/: __init__.py  schemas.py
openmemo/pyramid/: pyramid_engine.py
openmemo/skill/: skill_engine.py
openmemo/storage/: base_store.py  sqlite_store.py
openmemo/sync/: memory_router.py  sync_engine.py  sync_worker.py
openmemo/team/: promotion.py  team_router.py
tests/: test_adapters.py  test_consolidation.py  test_core.py  test_governance.py  test_hybrid.py  test_recall.py  test_scope.py  test_sdk.py  test_storage.py  test_team.py
