[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmemo"
version = "0.12.0"
description = "The Memory Infrastructure for AI Agents"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
    {name = "OpenMemo Contributors"}
]
keywords = ["memory", "ai", "agents", "llm", "rag", "knowledge"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]
server = [
    "flask>=3.0",
    "flask-cors>=4.0",
]
remote = [
    "requests>=2.28",
]
vector = [
    "sentence-transformers>=2.2",
]
all = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "requests>=2.28",
    "sentence-transformers>=2.2",
]

[project.scripts]
openmemo = "openmemo.cli:main"

[project.urls]
Homepage = "https://openmemo.ai"
Documentation = "https://github.com/openmemoai/openmemo/tree/main/docs"
Repository = "https://github.com/openmemoai/openmemo"
Issues = "https://github.com/openmemoai/openmemo/issues"
API = "https://api.openmemo.ai"

[tool.setuptools.packages.find]
include = ["openmemo*"]

[tool.ruff]
target-version = "py39"
line-length = 100
